# mos-6502-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: components.cpp  components.h  main.cpp  mos6502.cpp  mos6502.h  types.h  util.h
testing/: harte_test.cpp  harte_test.h  immediate_opcodes.cpp  lda.cpp
testing/asm/: basic_file.S  link.cfg  makefile
testing/assembly/: lda_test.S  lda_test.cfg
